Ensure rows don't wrap

--- a/ih/styling/styling.css
+++ b/ih/styling/styling.css
@@ -26,6 +26,10 @@ table {
   width: 30px;
 }
 
+.r { 
+  white-space: nowrap; 
+}
+
 .legend .s {
   border: none;
   border: 1px solid black
